# HireMe-Cover-Letter-Generator-Template-Engine-command-line-tool

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
output.docx/: WingardCL_TechInnovators.docx
src/: clg.py
template/: TemplateCL.docx  TemplateDSP.docx
